--- a/AndroidDemo/gradle/libs.versions.toml
+++ b/AndroidDemo/gradle/libs.versions.toml
@@ -10,11 +10,12 @@ constraintLayout = "2.2.1"
 composeBom = "2025.10.00"
 lifecycle = "2.9.4"
 coroutinesAndroid = "1.10.2"
+kotlinxSerialization = "1.9.0"
 webkit = "1.14.0"
 datastorePreferences = "1.1.7"
 securityCrypto = "1.1.0"
 biometric = "1.2.0-alpha05"
-okhttp = "5.1.0"
+okhttp = "5.2.1"
 junit = "4.13.2"
 androidxTestExt = "1.3.0"
 androidxTestRunner = "1.7.0"
@@ -39,6 +40,7 @@ androidxComposeUiTooling = { module = "androidx.compose.ui:ui-tooling" }
 androidxLifecycleRuntimeKtx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle" }
 androidxLifecycleViewmodelCompose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycle" }
 kotlinxCoroutinesAndroid = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutinesAndroid" }
+kotlinxSerializationJson = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerialization" }
 androidxWebkit = { module = "androidx.webkit:webkit", version.ref = "webkit" }
 androidxDatastorePreferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
 androidxSecurityCrypto = { module = "androidx.security:security-crypto", version.ref = "securityCrypto" }
