feat: create dedicated injection entry point for android; clean up build system with dual-bundle architecture
- Create multi-entry build script (build.cjs) for Android JS bundles
- Generate two clean bundles: walletkit-android-bridge.mjs (RPC) and inject.mjs (internal browser)
- Remove messy build output (index.js, index2.js, index3.js, assets/)
- Update Gradle task to copy only new .mjs bundles and static index.html

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "node js/build.cjs",
     "build:quickjs": "vite build --config vite.config.quickjs.ts",
     "build:all": "pnpm run build && pnpm run build:quickjs",
     "preview": "vite preview",
