--- a/AndroidDemo/gradle/libs.versions.toml
+++ b/AndroidDemo/gradle/libs.versions.toml
@@ -1,13 +1,14 @@
 [versions]
 agp = "8.13.0"
 kotlin = "2.2.20"
+leakcanaryAndroid = "2.14"
 spotless = "8.0.0"
 androidxCoreKtx = "1.17.0"
 androidxAppcompat = "1.7.1"
 material = "1.13.0"
 androidxActivity = "1.11.0"
 constraintLayout = "2.2.1"
-composeBom = "2025.10.00"
+composeBom = "2025.10.01"
 lifecycle = "2.9.4"
 coroutinesAndroid = "1.10.2"
 kotlinxSerialization = "1.9.0"
@@ -35,6 +36,7 @@ kotlinxSerializationJson = { module = "org.jetbrains.kotlinx:kotlinx-serializati
 androidxWebkit = { module = "androidx.webkit:webkit", version.ref = "webkit" }
 androidxDatastorePreferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
 androidxSecurityCrypto = { module = "androidx.security:security-crypto", version.ref = "securityCrypto" }
+leakcanaryAndroid = { module = "com.squareup.leakcanary:leakcanary-android", version.ref = "leakcanaryAndroid" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
