feat: implement Maven Central publishing workflow and update SDK documentation

--- a/TONWalletKit-Android/gradle.properties
+++ b/TONWalletKit-Android/gradle.properties
@@ -1,3 +1,8 @@
 android.useAndroidX=true
 android.enableJetifier=true
 org.gradle.jvmargs=-Xmx2g -Dkotlin.daemon.jvm.options=-Xmx2g
+
+# Library Publishing Configuration
+GROUP=io.github.ton-connect
+VERSION_NAME=1.0.0-beta01
+POM_ARTIFACT_ID=tonwalletkit-android
