--- a/TONWalletKit-Android/gradle/libs.versions.toml
+++ b/TONWalletKit-Android/gradle/libs.versions.toml
@@ -1,7 +1,8 @@
 [versions]
-agp = "8.13.0"
-kotlin = "2.2.20"
+agp = "8.13.1"
+kotlin = "2.2.21"
 spotless = "8.0.0"
+mavenPublish = "0.35.0"
 androidxCoreKtx = "1.17.0"
 lifecycle = "2.9.4"
 coroutinesAndroid = "1.10.2"
@@ -9,7 +10,7 @@ kotlinxSerialization = "1.9.0"
 webkit = "1.14.0"
 datastorePreferences = "1.1.7"
 securityCrypto = "1.1.0"
-okhttp = "5.2.1"
+okhttp = "5.3.1"
 junit = "4.13.2"
 androidxTestExt = "1.3.0"
 androidxTestRunner = "1.7.0"
@@ -41,3 +42,4 @@ androidLibrary = { id = "com.android.library", version.ref = "agp" }
 kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlinSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
+mavenPublish = { id = "com.vanniktech.maven.publish", version.ref = "mavenPublish" }
