--- a/TONWalletKit-Android/gradle/libs.versions.toml
+++ b/TONWalletKit-Android/gradle/libs.versions.toml
@@ -8,6 +8,7 @@ lifecycle = "2.10.0"
 coroutinesAndroid = "1.10.2"
 kotlinxSerialization = "1.9.0"
 tonKotlinCrypto = "0.5.0"
+kotlinxDatetime = "0.7.1"
 webkit = "1.14.0"
 datastorePreferences = "1.2.0"
 securityCrypto = "1.1.0"
@@ -25,6 +26,7 @@ androidxCoreKtx = { module = "androidx.core:core-ktx", version.ref = "androidxCo
 androidxLifecycleRuntimeKtx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle" }
 kotlinxCoroutinesAndroid = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutinesAndroid" }
 kotlinxSerializationJson = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerialization" }
+kotlinxDatetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinxDatetime" }
 androidxWebkit = { module = "androidx.webkit:webkit", version.ref = "webkit" }
 androidxDatastorePreferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
 androidxSecurityCrypto = { module = "androidx.security:security-crypto", version.ref = "securityCrypto" }
