--- a/TONWalletKit-Android/gradle/libs.versions.toml
+++ b/TONWalletKit-Android/gradle/libs.versions.toml
@@ -1,16 +1,17 @@
 [versions]
 agp = "8.13.1"
 kotlin = "2.2.21"
-spotless = "8.0.0"
+spotless = "8.1.0"
 mavenPublish = "0.35.0"
 androidxCoreKtx = "1.17.0"
-lifecycle = "2.9.4"
+lifecycle = "2.10.0"
 coroutinesAndroid = "1.10.2"
 kotlinxSerialization = "1.9.0"
+kotlinxDatetime = "0.7.1"
 webkit = "1.14.0"
-datastorePreferences = "1.1.7"
+datastorePreferences = "1.2.0"
 securityCrypto = "1.1.0"
-okhttp = "5.3.1"
+okhttp = "5.3.2"
 junit = "4.13.2"
 androidxTestExt = "1.3.0"
 androidxTestRunner = "1.7.0"
@@ -24,6 +25,7 @@ androidxCoreKtx = { module = "androidx.core:core-ktx", version.ref = "androidxCo
 androidxLifecycleRuntimeKtx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle" }
 kotlinxCoroutinesAndroid = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutinesAndroid" }
 kotlinxSerializationJson = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerialization" }
+kotlinxDatetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinxDatetime" }
 androidxWebkit = { module = "androidx.webkit:webkit", version.ref = "webkit" }
 androidxDatastorePreferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
 androidxSecurityCrypto = { module = "androidx.security:security-crypto", version.ref = "securityCrypto" }
