fix: normalize manifest URL to avoid bugs with internal webview
fix: broadcast events to all registered WebViews when the sessionId is empty to fix disconnect from demo app

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,6 @@ gradle.properties.template
 *.log
 node.log
 build-js-bundles.sh
+
+# Source maps (generated, can be regenerated from build)
+*.map
