--- a/AndroidDemo/gradle/libs.versions.toml
+++ b/AndroidDemo/gradle/libs.versions.toml
@@ -18,6 +18,15 @@ datastorePreferences = "1.1.7"
 securityCrypto = "1.1.0"
 coil = "3.3.0"
 hilt = "2.57.2"
+# Testing
+junit = "4.13.2"
+androidxTestCore = "1.6.1"
+androidxTestRunner = "1.6.2"
+androidxTestRules = "1.6.1"
+androidxTestEspresso = "3.6.1"
+androidxTestUiAutomator = "2.3.0"
+allureKotlin = "2.4.0"
+okhttp = "4.12.0"
 
 [libraries]
 androidxCoreKtx = { module = "androidx.core:core-ktx", version.ref = "androidxCoreKtx" }
@@ -44,6 +53,23 @@ coilCompose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coil" }
 coilNetwork = { module = "io.coil-kt.coil3:coil-network-okhttp", version.ref = "coil" }
 hiltAndroid = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
 hiltCompiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt" }
+# Testing
+junit = { module = "junit:junit", version.ref = "junit" }
+androidxTestCore = { module = "androidx.test:core", version.ref = "androidxTestCore" }
+androidxTestCoreKtx = { module = "androidx.test:core-ktx", version.ref = "androidxTestCore" }
+androidxTestRunner = { module = "androidx.test:runner", version.ref = "androidxTestRunner" }
+androidxTestRules = { module = "androidx.test:rules", version.ref = "androidxTestRules" }
+androidxTestEspressoCore = { module = "androidx.test.espresso:espresso-core", version.ref = "androidxTestEspresso" }
+androidxTestEspressoWeb = { module = "androidx.test.espresso:espresso-web", version.ref = "androidxTestEspresso" }
+androidxTestEspressoIntents = { module = "androidx.test.espresso:espresso-intents", version.ref = "androidxTestEspresso" }
+androidxTestUiAutomator = { module = "androidx.test.uiautomator:uiautomator", version.ref = "androidxTestUiAutomator" }
+androidxComposeUiTestJunit4 = { module = "androidx.compose.ui:ui-test-junit4" }
+androidxComposeUiTestManifest = { module = "androidx.compose.ui:ui-test-manifest" }
+allureKotlinAndroid = { module = "io.qameta.allure:allure-kotlin-android", version.ref = "allureKotlin" }
+allureKotlinModel = { module = "io.qameta.allure:allure-kotlin-model", version.ref = "allureKotlin" }
+allureKotlinCommons = { module = "io.qameta.allure:allure-kotlin-commons", version.ref = "allureKotlin" }
+okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+hiltAndroidTesting = { module = "com.google.dagger:hilt-android-testing", version.ref = "hilt" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
