fix: fix discriminated unions and type mappings

--- a/Scripts/generate-api/generate-api-models-config.json
+++ b/Scripts/generate-api/generate-api-models-config.json
@@ -10,6 +10,7 @@
   "modelMutable": false,
   "parcelizeModels": false,
   "sortModelPropertiesByRequiredFlag": true,
+  "modelNamePrefix": "TON",
   "typeMappings": {
     "number": "kotlin.Int",
     "integer": "kotlin.Int",
