--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -4,10 +4,13 @@ on:
   pull_request:
     branches:
       - main
+      - feature/mock-unit-test  # Temporary - remove after testing
     paths:
       - 'TONWalletKit-Android/**'
       - 'AndroidDemo/**'
       - '.github/workflows/android-ci.yml'
+      - '.github/workflows/android-e2e.yml'
+  workflow_dispatch:
 
 jobs:
   # Code formatting check with Spotless
@@ -60,7 +63,7 @@ jobs:
 
       - name: Run unit tests
         working-directory: TONWalletKit-Android
-        run: ./gradlew :bridge:testWebviewReleaseUnitTest
+        run: ./gradlew :impl:testWebviewReleaseUnitTest
 
       - name: Build WebView variant
         working-directory: TONWalletKit-Android
@@ -70,21 +73,22 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: bridge-webview-release
-          path: TONWalletKit-Android/bridge/build/outputs/aar/bridge-webview-release.aar
+          path: TONWalletKit-Android/impl/build/outputs/aar/impl-webview-release.aar
           retention-days: 7
 
       - name: Upload test results
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: test-results
-          path: TONWalletKit-Android/bridge/build/test-results/
+          name: unit-test-results
+          path: TONWalletKit-Android/impl/build/test-results/
           retention-days: 7
 
-  # Build Demo App
+  # Build Demo App (reused by E2E tests)
   build-demo:
     name: Build Demo App
     runs-on: ubuntu-latest
+    needs: test-sdk
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -99,20 +103,16 @@ jobs:
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
 
-      - name: Grant execute permission for gradlew (SDK)
-        working-directory: TONWalletKit-Android
-        run: chmod +x gradlew
+      - name: Download SDK AAR
+        uses: actions/download-artifact@v4
+        with:
+          name: bridge-webview-release
+          path: AndroidDemo/app/libs/
 
-      - name: Build SDK for Demo
-        working-directory: TONWalletKit-Android
-        run: ./gradlew buildWebview
+      - name: Rename AAR
+        run: mv AndroidDemo/app/libs/impl-webview-release.aar AndroidDemo/app/libs/bridge-release.aar
 
-      - name: Copy AAR to Demo app libs
-        run: |
-          mkdir -p AndroidDemo/app/libs
-          cp TONWalletKit-Android/bridge/build/outputs/aar/bridge-webview-release.aar AndroidDemo/app/libs/bridge-release.aar
-
-      - name: Grant execute permission for gradlew (Demo)
+      - name: Grant execute permission for gradlew
         working-directory: AndroidDemo
         run: chmod +x gradlew
 
@@ -120,9 +120,19 @@ jobs:
         working-directory: AndroidDemo
         run: ./gradlew assembleDebug
 
-      - name: Upload Demo APK
+      - name: Build Android Test APK
+        working-directory: AndroidDemo
+        run: ./gradlew assembleDebugAndroidTest
+
+      - name: Prepare APKs for upload
+        run: |
+          mkdir -p demo-apks
+          cp AndroidDemo/app/build/outputs/apk/debug/app-debug.apk demo-apks/
+          cp AndroidDemo/app/build/outputs/apk/androidTest/debug/app-debug-androidTest.apk demo-apks/
+
+      - name: Upload Demo APKs
         uses: actions/upload-artifact@v4
         with:
-          name: demo-app-debug
-          path: AndroidDemo/app/build/outputs/apk/debug/app-debug.apk
+          name: demo-apks
+          path: demo-apks/
           retention-days: 7
