--- a/.github/workflows/android-e2e.yml
+++ b/.github/workflows/android-e2e.yml
@@ -104,9 +104,10 @@ jobs:
             adb install -r apks/app-debug.apk
             adb install -r apks/app-debug-androidTest.apk
             
-            # Run specific test class
+            # Run specific test class with Allure token
             adb shell am instrument -w \
               -e class io.ton.walletkit.demo.e2e.tests.${{ matrix.test-class }} \
+              -e allureToken "${{ secrets.ALLURE_API_TOKEN }}" \
               io.ton.walletkit.demo.test/androidx.test.runner.AndroidJUnitRunner
 
       - name: Upload test results
