fix: update branch reference for E2E tests workflow

--- a/.github/workflows/android-e2e.yml
+++ b/.github/workflows/android-e2e.yml
@@ -6,7 +6,7 @@ on:
     types: [completed]
     branches:
       - main
-      - feature/mock-unit-test  # Temporary - remove after testing
+      - feature/allure-e2e  # Temporary - remove after testing
   workflow_dispatch:
     inputs:
       run_id:
