feat: enhance E2E test error handling and update ProGuard rules for public SDK classes

--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -210,7 +210,16 @@ jobs:
           script: |
             adb install -r apks/app-debug.apk
             adb install -r apks/app-debug-androidTest.apk
-            adb shell am instrument -w -e class io.ton.walletkit.demo.e2e.tests.${{ matrix.test-class }} -e allureToken "${{ secrets.ALLURE_API_TOKEN }}" io.ton.walletkit.demo.test/androidx.test.runner.AndroidJUnitRunner
+            OUTPUT=$(adb shell am instrument -w -e class io.ton.walletkit.demo.e2e.tests.${{ matrix.test-class }} -e allureToken "${{ secrets.ALLURE_API_TOKEN }}" io.ton.walletkit.demo.test/androidx.test.runner.AndroidJUnitRunner 2>&1)
+            echo "$OUTPUT"
+            if echo "$OUTPUT" | grep -q "FAILURES"; then
+              echo "::error::E2E tests failed for ${{ matrix.test-class }}"
+              exit 1
+            fi
+            if echo "$OUTPUT" | grep -q "Error in"; then
+              echo "::error::E2E tests had errors for ${{ matrix.test-class }}"
+              exit 1
+            fi
 
       - name: Upload test results
         if: always()
