--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -210,7 +210,7 @@ jobs:
           script: |
             adb install -r apks/app-debug.apk
             adb install -r apks/app-debug-androidTest.apk
-            OUTPUT=$(adb shell am instrument -w -e class io.ton.walletkit.demo.e2e.tests.${{ matrix.test-class }} -e allureToken "${{ secrets.ALLURE_API_TOKEN }}" io.ton.walletkit.demo.test/androidx.test.runner.AndroidJUnitRunner 2>&1)
+            OUTPUT=$(adb shell am instrument -w -e class io.ton.walletkit.demo.e2e.tests.${{ matrix.test-class }} -e allureToken "${{ secrets.ALLURE_API_TOKEN }}" -e testMnemonic "${{ secrets.WALLET_MNEMONIC }}" -e disableNetworkSend "true" io.ton.walletkit.demo.test/androidx.test.runner.AndroidJUnitRunner 2>&1)
             echo "$OUTPUT"
             echo "$OUTPUT" | grep -q "FAILURES" && echo "::error::E2E tests failed for ${{ matrix.test-class }}" && exit 1 || true
             echo "$OUTPUT" | grep -q "Error in" && echo "::error::E2E tests had errors for ${{ matrix.test-class }}" && exit 1 || true
