--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -10,6 +10,27 @@ on:
       - 'AndroidDemo/**'
       - '.github/workflows/android-ci.yml'
   workflow_dispatch:
+    inputs:
+      parallel_emulators:
+        description: 'Number of parallel emulators for E2E tests (1-5)'
+        required: false
+        default: '5'
+        type: choice
+        options:
+          - '1'
+          - '2'
+          - '3'
+          - '4'
+          - '5'
+
+env:
+  # All available test suites
+  ALL_TEST_SUITES: |
+    ConnectE2ETest
+    TransactionAddressAmountE2ETest
+    TransactionFromMessagesNetworkE2ETest
+    TransactionPayloadStateInitValidUntilE2ETest
+    MerkleJettonSignDataE2ETest
 
 jobs:
   # Code formatting check with Spotless
@@ -137,18 +158,65 @@ jobs:
           path: demo-apks/
           retention-days: 7
 
-  # Run E2E tests in parallel on emulators
-  e2e-tests:
-    name: E2E - ${{ matrix.test-class }}
+  # Generate test matrix based on parallel emulators setting
+  generate-matrix:
+    name: Generate Test Matrix
     runs-on: ubuntu-latest
     needs: build-demo
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+      - name: Generate matrix
+        id: set-matrix
+        run: |
+          # Get parallel count (default 5 for PRs, configurable for workflow_dispatch)
+          PARALLEL=${{ github.event.inputs.parallel_emulators || '5' }}
+          
+          # All test suites
+          SUITES=(
+            "ConnectE2ETest"
+            "TransactionAddressAmountE2ETest"
+            "TransactionFromMessagesNetworkE2ETest"
+            "TransactionPayloadStateInitValidUntilE2ETest"
+            "MerkleJettonSignDataE2ETest"
+          )
+          
+          TOTAL_SUITES=${#SUITES[@]}
+          
+          # Build matrix entries
+          MATRIX_ENTRIES=""
+          for ((i=0; i<PARALLEL; i++)); do
+            # Calculate which suites this emulator will run
+            RUNNER_SUITES=""
+            for ((j=i; j<TOTAL_SUITES; j+=PARALLEL)); do
+              if [ -n "$RUNNER_SUITES" ]; then
+                RUNNER_SUITES="$RUNNER_SUITES,${SUITES[$j]}"
+              else
+                RUNNER_SUITES="${SUITES[$j]}"
+              fi
+            done
+            
+            if [ -n "$RUNNER_SUITES" ]; then
+              # Use first suite name for display
+              FIRST_SUITE=$(echo "$RUNNER_SUITES" | cut -d',' -f1)
+              if [ -n "$MATRIX_ENTRIES" ]; then
+                MATRIX_ENTRIES="$MATRIX_ENTRIES,"
+              fi
+              MATRIX_ENTRIES="$MATRIX_ENTRIES{\"name\":\"$FIRST_SUITE\",\"suites\":\"$RUNNER_SUITES\"}"
+            fi
+          done
+          
+          echo "matrix={\"include\":[$MATRIX_ENTRIES]}" >> $GITHUB_OUTPUT
+          echo "Generated matrix: {\"include\":[$MATRIX_ENTRIES]}"
+
+  # Run E2E tests in parallel on emulators
+  e2e-tests:
+    name: E2E - ${{ matrix.name }}
+    runs-on: ubuntu-latest
+    needs: generate-matrix
     strategy:
       fail-fast: false
-      matrix:
-        test-class:
-          - ConnectE2ETest
-          - SendTransactionE2ETest
-          - SignDataE2ETest
+      matrix: ${{ fromJson(needs.generate-matrix.outputs.matrix) }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -198,7 +266,7 @@ jobs:
           disable-animations: true
           script: echo "Generated AVD snapshot for caching."
 
-      - name: Run E2E tests - ${{ matrix.test-class }}
+      - name: Run E2E tests - ${{ matrix.name }}
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 31
@@ -210,16 +278,39 @@ jobs:
           script: |
             adb install -r apks/app-debug.apk
             adb install -r apks/app-debug-androidTest.apk
-            OUTPUT=$(adb shell am instrument -w -e class io.ton.walletkit.demo.e2e.tests.${{ matrix.test-class }} -e allureToken "${{ secrets.ALLURE_API_TOKEN }}" -e testMnemonic "${{ secrets.WALLET_MNEMONIC }}" -e disableNetworkSend "true" io.ton.walletkit.demo.test/androidx.test.runner.AndroidJUnitRunner 2>&1)
-            echo "$OUTPUT"
-            echo "$OUTPUT" | grep -q "FAILURES" && echo "::error::E2E tests failed for ${{ matrix.test-class }}" && exit 1 || true
-            echo "$OUTPUT" | grep -q "Error in" && echo "::error::E2E tests had errors for ${{ matrix.test-class }}" && exit 1 || true
+            
+            # Run each test suite assigned to this emulator
+            IFS=',' read -ra SUITES <<< "${{ matrix.suites }}"
+            FAILED=0
+            
+            for SUITE in "${SUITES[@]}"; do
+              echo "=========================================="
+              echo "Running test suite: $SUITE"
+              echo "=========================================="
+              
+              OUTPUT=$(adb shell am instrument -w -e class io.ton.walletkit.demo.e2e.tests.$SUITE -e allureToken "${{ secrets.ALLURE_API_TOKEN }}" -e testMnemonic "${{ secrets.WALLET_MNEMONIC }}" -e disableNetworkSend "${{ secrets.DISABLE_NETWORK_SEND }}" io.ton.walletkit.demo.test/androidx.test.runner.AndroidJUnitRunner 2>&1)
+              echo "$OUTPUT"
+              
+              if echo "$OUTPUT" | grep -q "FAILURES"; then
+                echo "::error::E2E tests failed for $SUITE"
+                FAILED=1
+              fi
+              
+              if echo "$OUTPUT" | grep -q "Error in"; then
+                echo "::error::E2E tests had errors for $SUITE"
+                FAILED=1
+              fi
+            done
+            
+            if [ $FAILED -eq 1 ]; then
+              exit 1
+            fi
 
       - name: Upload test results
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: e2e-results-${{ matrix.test-class }}
+          name: e2e-results-${{ matrix.name }}
           path: |
             AndroidDemo/app/build/outputs/androidTest-results/
             AndroidDemo/app/build/reports/androidTests/
