--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -14,7 +14,7 @@ on:
       parallel_emulators:
         description: 'Number of parallel emulators for E2E tests (1-5)'
         required: false
-        default: '1'
+        default: '5'
         type: choice
         options:
           - '1'
@@ -215,8 +215,8 @@ jobs:
       - name: Generate matrix
         id: set-matrix
         run: |
-          # Get parallel count (default 1 for PRs for stability, configurable for workflow_dispatch)
-          PARALLEL=${{ github.event.inputs.parallel_emulators || '1' }}
+          # Get parallel count (default 5, configurable for workflow_dispatch)
+          PARALLEL=${{ github.event.inputs.parallel_emulators || '5' }}
           
           # All test suites
           SUITES=(
