--- a/TONWalletKit-Android/gradle.properties
+++ b/TONWalletKit-Android/gradle.properties
@@ -4,5 +4,5 @@ org.gradle.jvmargs=-Xmx2g -Dkotlin.daemon.jvm.options=-Xmx2g
 
 # Library Publishing Configuration
 GROUP=io.github.ton-connect
-VERSION_NAME=1.0.0-beta01
+VERSION_NAME=0.0.1
 POM_ARTIFACT_ID=tonwalletkit-android
