--- a/.github/workflows/publish-maven.yml
+++ b/.github/workflows/publish-maven.yml
@@ -16,12 +16,11 @@ on:
           - release
 
 jobs:
-  # Build SDK (generates models, builds bridge, builds AAR)
-  build-sdk:
-    name: Build SDK
+  # Build SDK and Publish to Maven Central
+  build-and-publish:
+    name: Build & Publish SDK
     runs-on: ubuntu-latest
-    outputs:
-      version: ${{ steps.version.outputs.version }}
+    environment: release
     steps:
       - name: Checkout kit-android code
         uses: actions/checkout@v4
@@ -113,51 +112,10 @@ jobs:
           path: TONWalletKit-Android/impl/build/outputs/aar/impl-webview-release.aar
           retention-days: 7
 
-  # COMMENTED OUT: Skipping E2E tests for publishing workflow
-  # build-demo:
-  #   name: Build Demo App
-  #   runs-on: ubuntu-latest
-  #   needs: build-sdk
-  #   steps:
-  #     ...
-
-  # COMMENTED OUT: Skipping E2E tests for publishing workflow
-  # generate-matrix:
-  #   ...
-
-  # COMMENTED OUT: Skipping E2E tests for publishing workflow
-  # e2e-tests:
-  #   ...
-
-  # COMMENTED OUT: Skipping E2E tests for publishing workflow
-  # e2e-summary:
-  #   ...
-
-  # Publish to Maven Central
-  publish-maven:
-    name: Publish to Maven Central
-    needs: build-sdk
-    runs-on: ubuntu-latest
-    environment: release
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-          cache: 'gradle'
-
-      - name: Grant execute permission for gradlew
-        working-directory: TONWalletKit-Android
-        run: chmod +x gradlew
-
       - name: Publish to Maven Central (Staging)
         if: github.event_name == 'push' || inputs.publish_type == 'staging'
         working-directory: TONWalletKit-Android
-        run: ./gradlew publishToMavenCentral --no-configuration-cache -PVERSION_NAME=${{ needs.build-sdk.outputs.version }}
+        run: ./gradlew publishToMavenCentral --no-configuration-cache -PVERSION_NAME=${{ steps.version.outputs.version }}
         env:
           ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.MAVEN_USERNAME }}
           ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.MAVEN_PASSWORD }}
@@ -168,7 +126,7 @@ jobs:
       - name: Publish to Maven Central (Auto-Release)
         if: github.event_name == 'workflow_dispatch' && inputs.publish_type == 'release'
         working-directory: TONWalletKit-Android
-        run: ./gradlew publishAndReleaseToMavenCentral --no-configuration-cache -PVERSION_NAME=${{ needs.build-sdk.outputs.version }}
+        run: ./gradlew publishAndReleaseToMavenCentral --no-configuration-cache -PVERSION_NAME=${{ steps.version.outputs.version }}
         env:
           ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.MAVEN_USERNAME }}
           ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.MAVEN_PASSWORD }}
@@ -180,7 +138,7 @@ jobs:
         run: |
           echo "✅ Published to Maven Central"
           echo ""
-          echo "📦 Artifact: io.github.ton-connect:tonwalletkit-android:${{ needs.build-sdk.outputs.version }}"
+          echo "📦 Artifact: io.github.ton-connect:tonwalletkit-android:${{ steps.version.outputs.version }}"
           echo ""
           if [ "${{ inputs.publish_type }}" == "release" ]; then
             echo "🚀 Auto-released to Maven Central"
