--- a/TONWalletKit-Android/gradle.properties
+++ b/TONWalletKit-Android/gradle.properties
@@ -3,6 +3,6 @@ android.enableJetifier=true
 org.gradle.jvmargs=-Xmx2g -Dkotlin.daemon.jvm.options=-Xmx2g
 
 # Library Publishing Configuration
-GROUP=io.github.ton-connect
+GROUP=org.ton
 VERSION_NAME=0.0.1
-POM_ARTIFACT_ID=tonwalletkit-android
+POM_ARTIFACT_ID=walletkit-android
