fix: update VERSION_NAME to include fix identifier

--- a/TONWalletKit-Android/gradle.properties
+++ b/TONWalletKit-Android/gradle.properties
@@ -4,5 +4,5 @@ org.gradle.jvmargs=-Xmx2g -Dkotlin.daemon.jvm.options=-Xmx2g
 
 # Library Publishing Configuration
 GROUP=org.ton
-VERSION_NAME=0.0.1
+VERSION_NAME=0.0.1-fix.1
 POM_ARTIFACT_ID=walletkit-android
