fix: update artifact group ID and version, fix source JAR configuration

--- a/.github/workflows/publish-maven.yml
+++ b/.github/workflows/publish-maven.yml
@@ -138,7 +138,7 @@ jobs:
         run: |
           echo "✅ Published to Maven Central"
           echo ""
-          echo "📦 Artifact: io.github.ton-connect:tonwalletkit-android:${{ steps.version.outputs.version }}"
+          echo "📦 Artifact: org.ton:walletkit-android:${{ steps.version.outputs.version }}"
           echo ""
           if [ "${{ inputs.publish_type }}" == "release" ]; then
             echo "🚀 Auto-released to Maven Central"
