--- a/AndroidDemo/gradle/libs.versions.toml
+++ b/AndroidDemo/gradle/libs.versions.toml
@@ -13,7 +13,7 @@ composeBom = "2025.12.01"
 lifecycle = "2.10.0"
 coroutinesAndroid = "1.10.2"
 kotlinxSerialization = "1.9.0"
-walletkitAndroid = "0.0.1"
+walletkitAndroid = "0.0.1-fix.2"
 webkit = "1.15.0"
 datastorePreferences = "1.2.0"
 securityCrypto = "1.1.0"
