feat: implement TON Connect session management and enhance session handling

--- a/Scripts/generate-api/generate-api-models-config.json
+++ b/Scripts/generate-api/generate-api-models-config.json
@@ -12,7 +12,8 @@
   "sortModelPropertiesByRequiredFlag": true,
   "modelNamePrefix": "TON",
   "modelNameMappings": {
-    "TONTransferRequest": "TONTransferRequest"
+    "TONTransferRequest": "TONTransferRequest",
+    "TONConnectSession": "TONConnectSession"
   },
   "typeMappings": {
     "number": "kotlin.Int",
